--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,6 +7,10 @@ body {
   width: 100%;
 }
 
+body {
+  line-height: 1.8 !important;
+}
+
 a {
   color: #365899;
   text-decoration: none;
@@ -14,4 +18,10 @@ a {
   &:hover {
     text-decoration: underline;
   }
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
 }
