--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,7 +7,7 @@ body {
   -moz-osx-font-smoothing: unset;
   // font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Yu Gothic",
   //   YuGothic, Verdana, Meiryo, "M+ 1p", sans-serif;
-  font-family: -apple-system, BlinkMacSystemFont;
+  font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue";
   font-size: 1.5rem;
   line-height: 1.8;
   color: #1d2129;
